test/extern/ferguson/externblock/two-modules2-error2.good
two-modules2-error2.chpl:12: error: Symbol 'y' undeclared in module 'A'
two-modules2-error2.chpl:15: error: Symbol 'y' undeclared in module 'A'
